# samvid.ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.vercel  Dockerfile.worker  README.md  contractmate_mvp_architecture.md  docker-compose.worker.yml  docker-compose.yml  main.py  pyproject.toml  render.yaml  worker.env.example
.github/workflows/: ci.yml
docs/: architecture.md  evaluation.md  threat-model.md
frontend/: index.html  middleware.ts  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/api/: blob-upload.ts
frontend/src/: Admin.tsx  App.test.tsx  App.tsx  AuthPage.test.tsx  AuthPage.tsx  AuthProvider.test.tsx  AuthProvider.tsx  BookDemo.test.tsx  BookDemo.tsx  Changelog.tsx  ChangelogPage.tsx  Home.tsx  api.test.ts  api.ts  auth.css  auth.ts  book-demo.css  changelog.css  favicon.ts  home.css  main.tsx  styles.css  types.ts  vite-env.d.ts
src/contractmate/: __init__.py  app.py  cli.py  settings.py
tests/: test_rate_limiting.py
tests/fixtures/: vendor-agreement.txt
tests/unit/: test_account_access.py  test_agno_contract_reviewer.py  test_app_openapi.py  test_approvals.py  test_chat_agent_service.py  test_chat_repository.py  test_contract_deletion.py  test_contract_processing.py  test_contract_worker.py  test_control_plane.py  test_db_migration.py  test_document_storage.py  test_email_ingestion.py  test_email_rendering.py  test_email_sender.py  test_evidence_validator.py  test_file_validation.py  test_fireworks_ai.py  test_inbound_rate_limit_policy.py  test_knowledge_indexing.py  test_knowledge_outbox.py  (+15 more)
(+64 files in other folders)
